[gd_scene load_steps=2 format=3 uid="uid://cujp1p2wjalhc"]

[ext_resource type="Script" path="res://Scripts/interaction_area.gd" id="1_dhkt1"]

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_dhkt1")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
